--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,8 @@
-plugins {
-    id 'nebula.optional-base' version '3.2.0' // mvn style optional dependencies
-}
-
 apply plugin: 'java-library'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-apply plugin: 'nebula.optional-base'
 
 group 'com.miragesql'
 version '2.1.0-SNAPSHOT'
@@ -22,31 +17,16 @@ repositories {
 
 
 dependencies {
-    compile 'org.javassist:javassist:3.22.0-GA'
-    compile 'ognl:ognl:3.2.3'
+    compile 'com.miragesql:miragesql:2.0.0'
+
     compile 'org.slf4j:slf4j-api:1.7.25'
 
-    compile 'commons-dbcp:commons-dbcp:1.4', optional
-    compile 'com.zaxxer:HikariCP:2.7.2', optional
-
-    compile "org.springframework:spring-core:3.2.18.RELEASE", optional
-    compile "org.springframework:spring-context:3.2.18.RELEASE", optional
-    compile "org.springframework:spring-jdbc:3.2.18.RELEASE", optional
-
-    compile "com.google.inject:guice:4.1.0", optional
-
-
-    compileOnly 'org.apache.ant:ant:1.10.1'
-    compileOnly 'org.apache.geronimo.specs:geronimo-jta_1.1_spec:1.1.1'
-    compileOnly 'javax.servlet:servlet-api:2.5'
-
     compile 'junit:junit:4.12'
+
     testImplementation 'cglib:cglib:3.2.5'
     testImplementation 'org.mockito:mockito-core:2.11.0'
     testImplementation 'com.h2database:h2:1.4.196'
     testImplementation 'org.hsqldb:hsqldb:2.4.0'
-
-    testImplementation 'org.springframework:spring-aop:3.2.18.RELEASE'
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.4.12'
@@ -92,8 +72,8 @@ def getPom(project) {
         name 'Mirage-SQL Test'
         packaging 'jar'
         // optionally artifactId can be defined here
-        description 'Mirage-SQL is an easy and powerful SQL centric database access library for Java (or JVM based languages) which provides dynamic SQL templates in plain SQL files.'
-        url 'https://github.com/mirage-sql/mirage'
+        description 'Mirage-SQL Test is a test utility for the Mirage-SQL framework.'
+        url 'https://github.com/mirage-sql/mirage-test'
 
         organization {
             name 'Mirage-SQL'
@@ -101,14 +81,14 @@ def getPom(project) {
         }
 
         scm {
-            connection 'scm:git:https://github.com/mirage-sql/mirage.git'
-            developerConnection 'scm:git:https://github.com/mirage-sql/mirage.git'
-            url 'https://github.com/mirage-sql/mirage'
+            connection 'scm:git:https://github.com/mirage-sql/mirage-test.git'
+            developerConnection 'scm:git:https://github.com/mirage-sql/mirage-test.git'
+            url 'https://github.com/mirage-sql/mirage-test'
         }
 
         issueManagement {
             system 'GitHub Issues'
-            url 'https://github.com/mirage-sql/mirage/issues'
+            url 'https://github.com/mirage-sql/mirage-test/issues'
         }
         licenses {
             license {
