--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'signing'
 
 
 group 'com.miragesql'
-version '2.1.0-SNAPSHOT'
+version '2.1.0'
 
 compileJava.options.encoding = 'UTF-8'
 sourceCompatibility = 1.8
@@ -17,7 +17,7 @@ repositories {
 
 
 dependencies {
-    compile 'com.miragesql:miragesql:2.0.0'
+    compile 'com.miragesql:miragesql:2.1.0'
 
     compile 'org.slf4j:slf4j-api:1.7.25'
 
